drafting file-organiser + fix many syntax errors & simple bugs

--- a/index_full.html
+++ b/index_full.html
@@ -22,6 +22,7 @@
 <link rel="import" href="undo-stack-view.html">
 <link rel="import" href="cut-object.html">
 <link rel="import" href="parsed-data.html">
+<link rel="import" href="file-organiser.html">
 </head>
 
 <body>
@@ -435,6 +436,7 @@ other file types will be ignored<br>
 					redo_stack="[[cut_redo_stack]]"></undo-stack-view>
 
 
+		<file-organiser style="height:300px;width: 300px;"></file-organiser>
 </div>
 
 <script>
