--- a/file-organiser.html
+++ b/file-organiser.html
@@ -6,8 +6,44 @@ by: DM
 <link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="bower_components/iron-list/iron-list.html">
 <link rel="import" href="utils.html">
+<link rel="import" href="worker-builder.html">
+
 
 <dom-module id="file-organiser">
+
+<script is='worker-builder' id="cut_reader" title="cut-base-reader" type='javascript/worker'>
+"use strict";
+
+var get_base_for_cuts = function(files){
+	// we don't bother with anything complicated here in terms of ticks/caching etc.
+	// just iterate over every single file we recieve and read its experiment name
+    var reader = new FileReaderSync();
+    var batch_bytes = 10*1024;
+    var regex_exact_cut = /Exact_cut_for: ((?:[\s\S](?! spikes:))*[\s\S])\s*spikes: ([0-9]*)/;
+    var results = [];
+	for (let ii=0; ii<files.length; ii++){
+		let ff = files[ii];
+		let header = "";
+		for(let p=0; p<ff.size; p+= batch_bytes){
+			// should only take one iteration
+			header += reader.readAsBinaryString(ff.slice(p, p+batch_bytes));
+			let match = regex_exact_cut.exec(header);
+			if(match){
+				results.push({
+					file: ff,
+					base: match[1]
+				});
+				break;
+			}
+		}
+		// if something is wrong we end up reading the whole file and fail to find a match
+	}
+	exec_main('got_base_for_cuts', results);
+}
+
+</script>
+
+
 <style>
 .trial{
 background: #f5f5f5;
@@ -15,8 +51,7 @@ padding: 5px;
 border: 1px solid #ccc;
 cursor: pointer;
 display: block;
-right: 2px;
-left: 2px;
+margin: 2px;
 width: initial !important;
 }
 .trial_top{
@@ -75,13 +110,31 @@ display: flex;
 flex-direction: column;
 font-size: 0px;
 };
+.tet_button{
+background: #f5f5f5;
+text-align: center;
+padding: 5px 10px 5px 10px;
+margin: 2px;
+display: inline-block;
+border: 1px solid #ccc;
+cursor: pointer;
+font-size: 12px;
+}
+.tet_switcher_title{
+font-size: 12px;
+display: inline-block;
+margin-left: 4px;
+}
 </style>
 <template>
-  <div class="tet_switcher">
-  1 2 3 4 5 etc.
+  <div class="tet_switcher" style$="[[_scroll_shadow(scrolled_down)]]">
+  	<div class="tet_switcher_title">tetrode:</div>
+  	<template is="dom-repeat" items="[[available_tets]]">
+  		<div class="tet_button">[[item]]</div>
+  	</template>
   </div>
-  <iron-list items="[[trials]]" as="trial">
-    <template><div class='trial'>
+  <iron-list items="[[trials]]" as="trial" id="trial_list">
+    <template><div><div class='trial'>
 	    <div class='trial_top'>
 		    <div class='trial_title'>trial '[[trial.name]]'</div>
 		    <div class='trial_set' style$='display:[[_show(trial.set)]];' title$='[[trial.set_caption]]'>~.set</div>
@@ -97,7 +150,7 @@ font-size: 0px;
 				</div>
 			</template>
 		</div>
-    </div></template>
+    </div></div></template>
   </iron-list>
 </template>
 
@@ -106,60 +159,312 @@ font-size: 0px;
 Polymer({
 	is: 'file-organiser',
 	properties: {
+		has_files: {
+			type: Boolean,
+			value: false,
+			notify: true,
+			readOnly: true
+		},
+		is_dragging_out: {
+			type: Boolean,
+			value: false,
+			notify: true,
+			readOnly: true
+		},
+		is_dragging_in: {
+			type: Boolean,
+			value: false,
+			notify: true,
+			readOnly: true
+		},
+		scrolled_down: {
+			type: Boolean,
+			value: false,
+			notify: true,
+			readOnly: true
+		},
+		available_tets: {
+			type: Array,
+			value: function(){return [];},
+			notify: true,
+			readOnly: true
+		},
 		trials: {
 			type: Array,
-			value: function(){ return [
-					{
-						name: "2241 2015-04-14 1",
-						set: 'sdsadsdf',
-						pos: 'adssadasd',
-						set_caption: 'sdsadsdf modified 10-Oct-2015 12:30',
-						tets: [
-							{
-								tet: 'sdfsdf',
-								tet_num: 2,
-								cuts: [
-									{
-										cut_type: '.cut',
-										short_name: '~_2.cut'
-									}
-								]
-							},
-							{
-								tet: 'sdfsdf',
-								tet_num: 3,
-								cuts: [
-									{
-										cut_type: '.cut',
-										short_name: '~_3.cut'
-									},
-									{
-										cut_type: 'obj',
-										short_name: '~a_3.cut'
-									}
-								]
-							},
-							{
-								tet: 'sdfsdf',
-								tet_num: 4,
-								cuts: [
-									{
-										cut_type: '.cut',
-										short_name: '~_4.cut'
-									}
-								]
-							}
-						]
-					}
-
-
-				];}
+			value: function(){ return [];}
 		}
 	}, created: function(){
 		this._file_from_fkey = new Map();
+		this._trial_from_base = new Map();
+	    document.addEventListener("dragover", this._dragover.bind(this));
+	    document.addEventListener("drop", this._drop.bind(this));
+    }, attached: function(){
+    	var self = this;
+    	this.$.trial_list.addEventListener('scroll', function(){
+	    	self._setScrolled_down(this.scrollTop > 0);
+	    });
+    },_dragover: function(e){
+		if(this.is_dragging_out) return;
+		
+        e.stopPropagation();
+        e.preventDefault();
+        e.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
+        this._setIs_dragging_in(true);
+      	// TODO: use all the drag events correctly
+    	// drag over is fired every few ms, show dragging notification for at least 500ms 
+        clearTimeout(this._drag_end_timer)
+        this._drag_end_timer = setTimeout(this._cancel_drag.bind(this),500); 
+
+    }, _drop: function(e){
+	  	e.stopPropagation();
+        e.preventDefault();
+        this._setHas_files(true); // TODO: wait till we've actually processed the files
+        this._cancel_drag();
+        var files = e.dataTransfer.files; // FileList object.
+           
+    	var regex_file_ext = /\.([0-9a-z]+)$/i;
+    	var ignore_exts = new Set(['eeg', 'egf', 'eeg2', 'egf2', 'inp']); 
+    	var files_for_base = new Map();
+    	var pending_cut_files = [];
+
+        // get lists of pos,set,tet files for each trial, and a single list of all cut files
+        // and also store a reference to all those files by fkey
+        for(let ii=0; ii<files.length; ii++){
+        	let ff = files[ii];
+        	let fkey = this._fkey_from_file(ff);
+        	let fname = ff.name;
+            let ext = regex_file_ext.exec(fname);
+			let base; // we will leave/set as undefined if we don't care about the file
+			
+			if (ext){
+			    ext = ext[1].toLowerCase();
+				base = fname.slice(0, fname.length-ext.length-1);
+
+				if(ext === "pos" || ext === "set"){
+					// good
+				} else if(ignore_exts.has(ext)){
+					continue;
+				} else if(ext === "cut"){
+					pending_cut_files.push(files[ii]);
+					base = undefined;
+				} else if(!isNaN(parseInt(ext))){
+					if(base.slice(-4) === ".clu"){
+						if(base.slice(-9) === ".temp.clu"){
+							continue;
+						} else {
+							pending_cut_files.push(files[ii]);
+							base = undefined;
+						}
+					} else if(base.slice(-4) === ".fet" ||
+							  base.slice(-4) === ".klg" ){
+						continue;
+					} // else a tet file
+				} else {
+					continue; // entirely unknown file type
+				}
+
+				// store permanent reference to the file
+				this._file_from_fkey[fkey] = files[ii];
+				if(base){
+					// unless it was a cut, we now know the base ok...
+					let trial_files = files_for_base[base] = files_for_base[base] || new Set();
+					trial_files.add(files[ii]);
+				}
+			}
+		}
+		
+		// try and assign cuts based on available trial bases (from this and previous drops)
+		var all_bases = new Set();
+		for(let b in this._trial_from_base)
+			all_bases.add(b);
+		for(let b in files_for_base)
+			all_bases.add(b);
+		var re = Utils.regex_from_list(Array.from(all_bases));
+		var difficult_cut_files = [];
+		if(re){
+			while(pending_cut_files.length){
+				let ff = pending_cut_files.pop();
+				match = re.exec(ff.name);
+				if(match){
+					match = match[0];
+					files_for_base[match] = files_for_base[match] || new Set();
+					files_for_base[match].add(ff);
+				} else {
+					let ext = regex_file_ext.exec(ff.name)[1].toLowerCase();
+					if(ext === "cut"){
+						difficult_cut_files.push(ff);
+					} // if it's a clu file we're stuffed
+				}
+			}		
+		} else {
+			difficult_cut_files = pending_cut_files;
+		}
+
+		if(difficult_cut_files.length){
+			this._worker = this._worker || Polymer.DomModule.import('file-organiser', '#cut_reader').create_for(this);
+			this._worker.exec('get_base_for_cuts', difficult_cut_files);
+		}
+
+		var trials = this.trials; // we are going to make a lot of changes to this, so we do a hack-ed notify-all at the end
+		var available_tets = new Set(this.available_tets); // we want this as a set for use bellow...
+		for(let base in files_for_base){
+			let trial_files = files_for_base[base];
+			let trial = this._trial_from_base[base];
+			if(!trial){
+				trial = {
+					name: base,
+					tets: []
+				};
+				this._trial_from_base[base] = trial;
+				trials.push(trial);
+			}
+			for(let ff of trial_files){
+				let fkey = this._fkey_from_file(ff);
+	            let ext = regex_file_ext.exec(ff.name)[1].toLowerCase();
+	            if(ext === "set"){
+	            	trial.set = fkey;
+	            	trial.set_caption = this._caption_from_file(ff);
+	            } else if(ext === "pos"){
+	            	trial.pos = fkey;
+	            	trial.pos_caption = this._caption_from_file(ff);
+	            } else if (ext === "cut"){
+	            	// note we sort and de-dupe cuts at the end of the trial_files loop (TODO: that)
+	            	let num = ff.name.match(this._regex_cut_tet_num);
+					if(num){
+						num = parseInt(num[1]);
+						tet_obj = this._get_tet_obj(trial, num);
+						available_tets.add(num);
+						tet_obj.cuts.push({
+							cut: fkey,
+							cut_type: 'cut',
+							date: ff.lastModified,
+							short_name: ff.name.replace(base, '~'),
+							caption: this._caption_from_file(ff)
+						});
+					} 
+	            } else {
+	            	let tet_num = parseInt(ext);
+	            	let tet_obj = this._get_tet_obj(trial, tet_num);
+	            	available_tets.add(tet_num);
+	            	if(ff.name.slice(-ext.length-".clu".length -1, -ext.length-1) === ".clu"){
+	            		// clu file
+	            		tet_obj.cuts.push({
+							cut: fkey,
+							cut_type: 'clu',
+							date: ff.lastModified,
+							short_name: ff.name.replace(base, '~'),
+							caption: this._caption_from_file(ff)
+						});
+	            	} else {
+	            		// tet file
+		            	tet_obj.tet = ff;
+		            	tet_obj.tet_caption = this._caption_from_file(ff);	            		
+	            	}
+	            }
+			}
+			// sort test for the trial, and then sort and de-dupe cuts for each tet
+			trial.tets = trial.tets.sort(function(a,b){
+				return a.tet_num > b.tet_num ? 1 : -1;
+			})
+			for(let ii =0; ii<trial.tets.length; ii++){
+				let tet_obj = trial.tets[ii];
+				tet_obj.cuts.sort(function(a,b){
+					return b.date - a.date;
+				});
+				for(let jj=0; jj<tet_obj.cuts.length; jj++){
+					if(jj && tet_obj.cuts[jj-1].cut === tet_obj.cuts[jj].cut){
+						tet_obj.cuts.splice(jj--, 1);
+					}
+				}
+			}
+		}
+
+
+		trials.sort(function(a,b){
+			return a.name > b.name;
+		})
+		available_tets = Array.from(available_tets);
+		available_tets.sort(this._numeric_sort);
+		this._setAvailable_tets(available_tets);
+		this._reassign_trials_denovo();	// notify absolutely everything !!! 
+	}, _get_tet_obj: function(trial, tet_num){
+		// adds it to trial.tets if it doesn't exist
+    	for(tt=0; tt<trial.tets.length; tt++){
+    		if(trial.tets[tt].tet_num === tet_num){
+    			return trial.tets[tt];
+    		}
+    	}
+    	var obj = {
+			tet_num: tet_num,
+			cuts: []
+		};
+		trial.tets.push(obj);
+		return obj;
+
+	}, _cancel_drag: function(){
+		clearTimeout(this._drag_end_timer);
+		this._drag_end_timer = 0;
+		this._setIs_dragging_in(false);
 	}, _show: function(v){
 		return v ? '' : 'none';
-	}
+	}, _scroll_shadow: function(v){
+		return v ? 'box-shadow: 0px 3px 4px 0px #bbb;z-index: 1;' : '';
+	}, _fkey_from_file: function(file){
+    	return file ? file.lastModified + " " + file.name : "";
+    }, _caption_from_file: function(file){
+    	 var d = new Date(file.lastModified);
+    	 return file.name + " (" + Math.ceil(file.size/1204,0).toLocaleString() + 
+    	 		"KB)\nmodified at " + d.toLocaleTimeString({}, {hour: "numeric", minute: "numeric"})
+    	 		 + " on " + d.toLocaleDateString({}, {month:"short", day:"numeric", year: "numeric"});
+    }, _numeric_sort: function(a,b){
+    	return a-b; 
+    }, _reassign_trials_denovo: function(){
+		// TODO: see https://github.com/Polymer/polymer/issues/2279
+		this.set('trials', JSON.parse(JSON.stringify(this.trials)));
+		this._trial_from_base.clear();
+		for(let ii=0; ii<this.trials.length; ii++){
+			this._trial_from_base[this.trials[ii].name] = this.trials[ii];
+		}
+    }, got_base_for_cuts: function(results){
+    	// TODO: there is a lot of copy-paste from main drop function, should fix that really.
+
+    	var trials = this.trials;
+    	var available_tets = new Set(this.available_tets); // we want this as a set for use below...
+    	for(let ii=0; ii<results.length; ii++){
+    		let base = results[ii].base;
+    		let ff = results[ii].file;
+    		let trial = this._trial_from_base[base];
+    		if(!trial){
+    			trial = {
+					name: base,
+					tets: []
+				};
+				trials.push(trial);
+    		}
+        	let num = ff.name.match(this._regex_cut_tet_num);
+			if(num){
+				num = parseInt(num[1]);
+				tet_obj = this._get_tet_obj(trial, num);
+				available_tets.add(num);
+				tet_obj.cuts.push({
+					cut: this._fkey_from_file(ff),
+					cut_type: 'cut',
+					date: ff.lastModified,
+					short_name: ff.name.replace(base, '~'),
+					caption: this._caption_from_file(ff)
+				});
+			} 
+    	}
+
+		trials.sort(function(a,b){
+			return a.name > b.name;
+		})
+		available_tets = Array.from(available_tets);
+		available_tets.sort(this._numeric_sort);
+		this._setAvailable_tets(available_tets);
+    	this._reassign_trials_denovo();
+    },
+    _regex_cut_tet_num: /(\d*)[a-zA-Z _]*\.cut$/
 })
 
 </script>
