--- a/index_full.html
+++ b/index_full.html
@@ -436,7 +436,7 @@ other file types will be ignored<br>
 					redo_stack="[[cut_redo_stack]]"></undo-stack-view>
 
 
-		<file-organiser style="height:300px;width: 300px;"></file-organiser>
+		<file-organiser style="height:300px;width: 370px;"></file-organiser>
 </div>
 
 <script>
@@ -465,11 +465,9 @@ document.getElementById('the_app').initializeDefaultOptions = function(ev) {
 
 <!-- public libraries and generic stuff for this app -->
 <script src="jquery.min.js"></script>  
-<script src="jquery.mousewheel.min.js"></script>
+<!--<script src="jquery.mousewheel.min.js"></script>-->
 <script src="keymaster.min.js"></script>  
 <script src="utils.js"></script>
-<script src="filesystem.js"></script>
-<script src="Mlib.js"></script>
 <!--<script src="webgl-debug.js"></script> -->
 
 </body>
